# ZeroMcp.TeskKitEngine

./: Cargo.toml  InitialSpecDoc.md  README.md  progress.md
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs
src/cli/: diff.rs  generate.rs  mod.rs  run.rs
src/definition/: mod.rs  parser.rs  schema.rs  types.rs
src/diff/: baseline.rs
src/engine/: executor.rs  result.rs
src/generator/: known_good.rs  mod.rs  scaffold.rs
src/protocol/: client.rs  jsonrpc.rs  mcp.rs  mod.rs  session.rs
src/recording/: mod.rs  recorder.rs  recording_transport.rs  replay.rs
src/transport/: http.rs  mock.rs  mod.rs  stdio.rs
src/validators/: determinism.rs  error_path.rs  metadata.rs  mod.rs  protocol_val.rs  schema.rs
