[package]
name = "mcptest"
version = "0.1.0"
edition = "2024"
description = "Universal testing toolkit for MCP servers"
license = "MIT"
repository = "https://github.com/ZeroMcp/ZeroMcp.TestKitEngine"

[[bin]]
name = "mcptest"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.5.60", features = ["derive"] }
futures = "0.3.32"
jsonschema = "0.44.1"
reqwest = { version = "0.13.2", features = ["json"] }
reqwest-eventsource = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_json_path = "0.7.2"
similar = "2.7.0"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
uuid = { version = "1.22.0", features = ["v4"] }
